--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,21 @@
 [bumpversion]
-current_version = 2.1.0
+current_version = 2.2.0rc1
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>.*)
+serialize = 
+	{major}.{minor}.{patch}{release}
+	{major}.{minor}.{patch}
 commit = True
 tag = True
+
+[bumpversion:part:release]
+optional_value = final
+values = 
+	rc1
+	rc2
+	rc3
+	rc4
+	rc5
+	final
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
